--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,8 @@ dependencies {
   api "com.github.MrStahlfelge.gdx-websockets:core:$websocketVersion"
   implementation 'io.socket:socket.io-client:2.1.0'
   implementation 'org.json:json:20210307'
+  implementation 'org.reflections:reflections:0.10.2'
+  implementation 'ch.qos.logback:logback-classic:1.4.14'
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
