--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   implementation 'org.json:json:20210307'
   implementation 'org.reflections:reflections:0.10.2'
   implementation 'ch.qos.logback:logback-classic:1.4.14'
+  implementation "com.badlogicgames.ashley:ashley:1.7.3"
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
